--- a/templates/addtask.html
+++ b/templates/addtask.html
@@ -3,6 +3,17 @@
 <div class="row">
     <form action="" method="POST" class="col s12">
         <div class="row">
+          <div class="input-field col s12">
+            <i class="material-icons prefix">poll</i>
+              <select>
+                <option value="" disabled selected>Choose your option</option>
+                <option value="1">Option 1</option>
+                <option value="2">Option 2</option>
+                <option value="3">Option 3</option>
+              </select>
+          </div>
+        </div>
+        <div class="row">
             <div class="input-field col s12">
                 <i class="material-icons prefix">assignment</i>
                 <input id="task_name" name="task_name" type="text">
