--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -5,8 +5,21 @@
 <ul class="collapsible" data-collapsible="accordion">
   {% for task in tasks %}
   <li>
-    <div class="collapsible-header"><i class="material-icons">expand_more</i>
-      <strong>{{task.task_name}} - {{task.due_date}}</strong>
+    <div class="collapsible-header">
+    
+      <div class="col s1">
+        <i class="material-icons">expand_more</i>  
+      </div>
+    
+      <div class="col s2">
+        <a href="{{url_for('edit_task', task_id = task._id)}}" class="waves-effect waves-light btn btn_small">Done</a>
+        <a class="waves-effect waves-light btn btn_small blue">Edit</a>
+      </div>
+
+      <div class="task_header col s9">
+        <strong>{{task.task_name}} - {{task.due_date}}</strong>  
+      </div>
+    
     </div>
     <div class="collapsible-body">
       <span>
