--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -12,8 +12,8 @@
       </div>
     
       <div class="col s2">
-        <a href="{{url_for('edit_task', task_id = task._id)}}" class="waves-effect waves-light btn btn_small">Done</a>
-        <a class="waves-effect waves-light btn btn_small blue">Edit</a>
+        <a class="waves-effect waves-light btn btn_small">Done</a>
+        <a href="{{url_for('edit_task', task_id = task._id)}}" class="waves-effect waves-light btn btn_small blue">Edit</a>
       </div>
 
       <div class="task_header col s9">
