--- a/templates/categories.html
+++ b/templates/categories.html
@@ -14,8 +14,14 @@
                     <strong>{{category.category_name}}</strong>
                 </div>
             </div>
-        {% endfor %}
+
+            {% endfor %}
     </ul>
+</div>
+<div class="row">
+    <a href="{{ url_for('new_category') }}" class="waves-effect waves-light btn">
+        <i class="material-icons right">playlist_add</i>Add Category
+    </a>
 </div>
 
 {% endblock %}
